--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "sass": "^1.59.3",
+    "swr": "^2.1.0",
     "typescript": "5.0.2"
   }
 }
