--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-modal": "^3.16.1",
     "sass": "^1.59.3",
     "swr": "^2.1.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1"
